# api-detector-yolo

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  gradio_app.py  main.py  object_detector.py  pyproject.toml  requirements.txt  schemas.py
.github/workflows/: ci.yml
tests/: conftest.py  test_api.py
